<resources>
    <string name="app_name">MBM EEC INFO</string>
    <string name="academic">Academic</string>
    <string name="action_settings">Settings</string>
    <string name="after_college">After College</string>
    <string name="contact_us">Contact Us</string>
    <string name="document">Documents</string>
    <string name="eigth_sem_practical_link"><a href="https://drive.google.com/file/d/0B9t7qtK0OaHxMVg1eGJmWWdCY1U/view?usp=sharing">VIII_Sem_Practical_Material</a></string>
    <string name="eigth_sem_practical_link_mirror"><a href="http://www.filehosting.org/file/details/510506/VIII_SEM_PRACTICAL_MATERIAL.rar">VIII_Sem_Practical_Material_Mirror</a></string>
    <string name="eigth_sem_practical_wandm_link"><a href="https://drive.google.com/file/d/0B9t7qtK0OaHxMU9XVTMyMlpzWWs/view?usp=sharing">VIII_Sem_Practical_WandM_Material_Mirror</a></string>
    <string name="eigth_sem_practical_wandm_link_mirror"><a href="http://www.filehosting.org/file/details/510508/VIII_SEM_PRACTICAL_MATERIAL_wandm_lab.rar">VIII_Sem_Practical_WandM_Material_Mirror</a></string>
    <string name="eigth_sem_study_link"><a href="https://drive.google.com/file/d/0B9t7qtK0OaHxM2ZZVDBtQ1daRW8/view?usp=sharing">VIII_Sem_Material</a></string>
    <string name="eigth_sem_study_link_mirror"><a href="http://www.filehosting.org/file/details/512561/VIII_SEM_Material.rar">VIII_Sem_Material_Mirror</a></string>
    <string name="exam_pattern">Exam Pattern</string>
    <string name="facebook"><a href="https://www.facebook.com/ANeverTechnology">Like Us on Facebook</a></string>
    <string name="feedback">To give feedback, suggestion or to help in improving the app, you can contact us by following medium.</string>
    <string name="fifth_sem_practical_link"><a href="https://drive.google.com/file/d/0B9t7qtK0OaHxamVFX2k1a3dHdG8/view?usp=sharing">V_Sem_Practical_Material</a></string>
    <string name="fifth_sem_practical_link_mirror"><a href="http://www.filehosting.org/file/details/510488/V-ACE-Lab%20manual.rar">V_Sem_Practical_Material_Mirror</a></string>
    <string name="final_year_project">Final Year Project</string>
    <string name="final_year_project_download_report"><a href="https://drive.google.com/file/d/0B9t7qtK0OaHxZDBHdkNpVE90MW8/view?usp=sharing">Final year project : Sample Report </a></string>
    <string name="final_year_project_download_report_mirror"><a href="http://www.filehosting.org/file/details/510348/Final-Year_Report.rar">Final year project : Sample Report : Mirror </a></string>
    <string name="final_year_project_mentor_assignment">Mentor Assignment</string>
    <string name="final_year_project_mentor_assignment_text">"1. The mentor is assigned to team by the dept and it is in random order.

 2. To get the mentor, first you are gonna need a list that will contain all the team group, their members, email ID and contact number. All this above work will be done by the student itself. Try to do this asap to get your mentor.

 3. The list will be submitted to the dept with an application to HOD sir for allocation of mentor.

 4. After that, you will be allocate mentor in few days.

"</string>
    <string name="final_year_project_project_assignment">Project Assignment</string>
    <string name="final_year_project_project_assignment_text">"1. Soon after mentor assignment, you have to contact your mentor with your whole team. They will give you basic instruction about project, rules and regulations.

 2. You will also be given an attendance sheet. On that sheet, you have to write name of all the members and get it signed every time when you meet your mentor. It is very important as it will be seen at the time of project viva.

 3. Soon after the first meeting, you have to show you mentor project ideas. If it is approved by your mentor, you have to write the name of project in the project register (contact swami sir).

 4. You can get the project idea from IEEE papers. The project should be complex

 5. Before taking any idea to mentor, first check whether the components are available in local market or not. If they are not available, check whether you can get them in right time.

 6. Try to approve the project asap. Maximum should be within one month.

 7. As your project making process will be accompanied by placement season, 7th and 8th sem exam, think in advance about how you want to proceed.

 8. Try to finish the project in running state before 1 month of your written exam i.e. by first week of April. By this time, your mentor can announce you to show working project. So be prepare.

 9.You are not gonna get any day after exam. Generally after practical exam within 5 days you have to show your project.

"</string>
    <string name="final_year_project_project_inspection">Project Inspection</string>
    <string name="final_year_project_project_links">External link / download related to Project</string>
    <string name="final_year_project_project_inspection_text">"1. The project viva is held after training viva. You can expect that your viva will be held within 5 days of your practical exam completion

 2. The project internal examiners consist of HOD sir and an external.

 3. Choose to make a project in pure computer stream only if your programming is really good. If not, then go for electronics or a combination of both. At least you would have some hardware to show in your project.

 4. You also have to accompany a hard bind project report. The demo report is available in download link.

 5. It is recommended that your project should be in running state, plus all the member should have knowledge about how it works. So divide the work in every member of the team.

 6. The project report impacts a big impression on your marks. Try to make it complete before your written examination. Also it should look like that you have done a great work in making the report.

 7. Your project should be in good condition, so you can also decorate it in simple manner enough for presentation.

"</string>
    <string name="final_year_project_team_formation">Team Formation</string>
    <string name="final_year_project_team_formation_text">"1. Final year project carries 150 marks. So it is a great chance to make your percentage better by doing the project right way.

 2. First, you have to make your own team. It is not made by the department.

 3. The team contains 5-7 members. To be on safer side make a team of 6 members as there are few professor.

 4. While making the team, try to choose member who have different specially in different field. Like at least one should know knowledge of embedded system if you are working on micro-controller. In short team member should be according to the need of project.

 5. The team member could be from any group (like A-1 or A-4) it does not matter. But it would help if all the members are from same group, as you there will be no clash of labs between the members.

"</string>
    <string name="hello_world">Hello world!</string>
    <string name="internship">Training / Internship</string>
    <string name="internship_common_guidelines">Important information regarding Internship / Training</string>
    <string name="internship_common_guidelines_text">"1. To complete your degree, you need to undergo two 45 days each training period. One in second year, and other in the third year.

 2. It is mandatory and also carry a weightage of 75 marks.

 3. To apply in a company, first you need a form attested by TPO head.

 4. In the form, you have to mention the name of company (in which you want to apply for internship), your name, branch and current semester with your signature and left thumb impression.

 5. This form is available at the ENGCOL.

 6. Note that you can attest only two form from TPO head, so think carefully.

 7. Also note that this form will be needed in the company so that they can give you the required certificate of internship.

 8. The certificate should clearly mention the date from which date you started training and up to which you have attended the internship.

 9. The internship should be of minimum 45 days. It is mandatory otherwise you would be asked for re training for remaining days of your internship.

 10. You also have to submit Joining report in the TPO office which will mention that you have joined the company. The form is available in the download link. The form will be attested by your training supervisor.

 11. Try to make project report in your internship and get it signed by your training supervisor. remember you have to show project report in the training viva, so make it when it should.

 12. It is also good to take project letter from your training company. Some provides and some not.

 13. The Training viva of both 2nd year and 3rd year will be held after practical examination of 8th semester. You will be required to bring both the certificates and project report.

 14. You will be asked question about the training. So be aware to complete your training with wake mind.

 15. The project report should be in spiral bind. Also include a photocopy of the certificate in your project report.

 16. You can also accompany project report in placement interview. But that is optional and do it on your own whim."</string>
    <string name="internship_document">List of Documents required before and after Internship / Training</string>
    <string name="internship_document_text">" "<b>Documents :</b>"
 1. Training Form (available at ENGCOL)
 2. Joining report (see download)
 3. Internship certificate
 4. Project letter
 5. Project report
"</string>
    <string name="internship_download_joining_report"><a href="https://drive.google.com/file/d/0B9t7qtK0OaHxV0dNSEs5dUVVNzg/view?usp=sharing">Internship : Joining Report Format </a></string>
    <string name="internship_download_joining_report_mirror"><a href="http://www.filehosting.org/file/details/510308/joining%20report.doc">Internship : Joining Report Format : Mirror </a></string>
    <string name="internship_download_training_report"><a href="https://drive.google.com/file/d/0B9t7qtK0OaHxQlhrWDVPdTRQd2M/view?usp=sharing">Internship : Sample Training Report </a></string>
    <string name="internship_download_training_report_mirror"><a href="http://www.filehosting.org/file/details/510346/asp.net.docx">Internship : Sample Training Report : Mirror </a></string>
    <string name="internship_training_viva">Examination Viva regarding Internship / Training</string>
    <string name="internship_training_links">External link / download related Internship / Training</string>
    <string name="placement_corner">Placement Corner</string>
    <string name="syllabus">Syllabus</string>
    <string name="useful_links">Important Links</string>
</resources>