<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/padding_bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10.0dip"
    style="@style/AppTheme">

    <ScrollView
        android:id="@id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_syllabus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="btnClickHandlerSemester"
                android:text="@string/syllabus"
                android:visibility="visible" />


            <Button
                android:id="@id/btn_exam_pattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/btn_margin"
                android:onClick="btnClickHandleExamPattern"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/exam_pattern"
                android:visibility="visible" />


            <Button
                android:id="@id/btn_academic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/btn_margin"
                android:onClick="btnClickHandlerAcademic"
                android:text="@string/academic"
                android:visibility="visible" />


            <Button
                android:id="@id/btn_placement_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/btn_margin"
                android:onClick="btnClickHandlerPlacementCorner"
                android:visibility="visible"
                android:text="@string/placement_corner" />


            <Button
                android:id="@id/btn_after_college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/btn_margin"
                android:onClick="btnClickHandlerAfterCollege"
                android:visibility="visible"
                android:text="@string/after_college" />


            <Button
                android:id="@id/btn_useful_links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/btn_margin"
                android:onClick="btnClickHandlerUsefulLinks"
                android:visibility="visible"
                android:text="@string/useful_links" />


            <Button
                android:id="@id/btn_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20.0dip"
                android:layout_marginTop="@dimen/btn_margin"
                android:onClick="btnClickHandlerContactUs"
                android:visibility="visible"
                android:text="@string/contact_us" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
